[gd_scene load_steps=23 format=3 uid="uid://cyo65uxhe3jqu"]

[ext_resource type="Script" path="res://Main/Boilers/AI.gd" id="1_m0pvk"]
[ext_resource type="Texture2D" uid="uid://4hvms0hld5ne" path="res://Src/kelly.png" id="3_ka7jd"]
[ext_resource type="Texture2D" uid="uid://canjkxnp33p0r" path="res://Src/white.png" id="4_it4lh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nf5ae"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 1, 0, 0.6)

[sub_resource type="Animation" id="Animation_frid0"]
resource_name = "AddHealth"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:shadow_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:theme_override_styles/panel:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 1, 0, 0.6), Color(0, 1, 0, 0.6)]
}

[sub_resource type="Animation" id="Animation_p08hi"]
resource_name = "AnimationDamage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:shadow_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:theme_override_styles/panel:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.6), Color(1, 0, 0, 0.6)]
}

[sub_resource type="Animation" id="Animation_us0jm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:shadow_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:theme_override_styles/panel:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 0.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_owxu8"]
_data = {
"AddHealth": SubResource("Animation_frid0"),
"AnimationDamage": SubResource("Animation_p08hi"),
"RESET": SubResource("Animation_us0jm")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxl3b"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yjxu"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wt3j"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnbej"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.756863, 0, 0.756863, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color(0.756863, 0, 0.756863, 1)

[sub_resource type="Animation" id="Animation_2oci0"]
resource_name = "AbilityActivated"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AbilityActivatedPanel:theme_override_styles/panel:shadow_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 5, 0]
}

[sub_resource type="Animation" id="Animation_2r3cg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AbilityActivatedPanel:theme_override_styles/panel:shadow_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbd6p"]
_data = {
"AbilityActivated": SubResource("Animation_2oci0"),
"RESET": SubResource("Animation_2r3cg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bq6tc"]
bg_color = Color(0.847059, 0, 0.937255, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.645776, 0.000671135, 0.715825, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rpgm"]
bg_color = Color(0.0470588, 0.729412, 0, 0.686275)
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0470588, 0.729412, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myyge"]
bg_color = Color(0.219608, 0.690196, 0.690196, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.116081, 0.425013, 0.425029, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="CircleShape2D" id="CircleShape2D_er24s"]
radius = 23.0868

[sub_resource type="CircleShape2D" id="CircleShape2D_33bqy"]
radius = 23.0868

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_joeuc"]
bg_color = Color(0.6, 0.6, 0.6, 0.466667)

[sub_resource type="CircleShape2D" id="CircleShape2D_i0sd8"]
radius = 195.164

[node name="AI" type="CharacterBody2D" groups=["Player"]]
z_index = 2
position = Vector2(464, 320)
collision_layer = 2
collision_mask = 14
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_m0pvk")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 3

[node name="BoilerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -640.0
offset_top = -360.0
offset_right = -600.0
offset_bottom = -320.0

[node name="HealthUI" type="Control" parent="BoilerUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 553.0
offset_top = 210.0
offset_right = 727.0
offset_bottom = 247.0

[node name="HealthBar" type="TextureProgressBar" parent="BoilerUI/HealthUI"]
layout_mode = 0
offset_left = 47.0
offset_top = 18.0
offset_right = 126.0
offset_bottom = 34.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("4_it4lh")
texture_progress = ExtResource("4_it4lh")
tint_under = Color(0.301961, 0.301961, 0.301961, 1)
tint_progress = Color(0, 0.882353, 0, 1)

[node name="Label" type="Label" parent="BoilerUI/HealthUI"]
layout_mode = 0
offset_left = 65.0
offset_top = 13.0
offset_right = 108.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 15
text = "100000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="BoilerUI/HealthUI"]
show_behind_parent = true
layout_mode = 0
offset_left = 44.0
offset_top = 16.0
offset_right = 129.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nf5ae")

[node name="HealthBarAnimation" type="AnimationPlayer" parent="BoilerUI/HealthUI"]
libraries = {
"": SubResource("AnimationLibrary_owxu8")
}

[node name="Regeneration" type="Timer" parent="BoilerUI/HealthUI"]
wait_time = 1.5

[node name="RegenerationWait" type="Timer" parent="BoilerUI/HealthUI"]
wait_time = 3.5
one_shot = true

[node name="AmmoUI" type="Control" parent="BoilerUI"]
anchors_preset = 0
offset_left = 246.0
offset_top = 133.0
offset_right = 286.0
offset_bottom = 173.0
scale = Vector2(0.6, 0.6)

[node name="Bar1" type="TextureProgressBar" parent="BoilerUI/AmmoUI"]
layout_mode = 0
offset_left = 584.0
offset_top = 200.0
offset_right = 628.0
offset_bottom = 216.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("4_it4lh")
texture_progress = ExtResource("4_it4lh")
tint_under = Color(0.537011, 0.537011, 0.537011, 1)
tint_progress = Color(0.690196, 0.415686, 0.113725, 1)

[node name="Panel" type="Panel" parent="BoilerUI/AmmoUI/Bar1"]
show_behind_parent = true
layout_mode = 0
offset_left = -4.0
offset_top = -3.0
offset_right = 46.0
offset_bottom = 19.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nxl3b")

[node name="Bar2" type="TextureProgressBar" parent="BoilerUI/AmmoUI"]
layout_mode = 0
offset_left = 632.0
offset_top = 200.0
offset_right = 678.0
offset_bottom = 216.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("4_it4lh")
texture_progress = ExtResource("4_it4lh")
tint_under = Color(0.537011, 0.537011, 0.537011, 1)
tint_progress = Color(0.690196, 0.415686, 0.113725, 1)

[node name="Panel" type="Panel" parent="BoilerUI/AmmoUI/Bar2"]
show_behind_parent = true
layout_mode = 0
offset_left = -2.0
offset_top = -3.0
offset_right = 48.0
offset_bottom = 19.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7yjxu")

[node name="Bar3" type="TextureProgressBar" parent="BoilerUI/AmmoUI"]
layout_mode = 0
offset_left = 682.0
offset_top = 200.0
offset_right = 726.0
offset_bottom = 216.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("4_it4lh")
texture_progress = ExtResource("4_it4lh")
tint_under = Color(0.537011, 0.537011, 0.537011, 1)
tint_progress = Color(0.690196, 0.415686, 0.113725, 1)

[node name="Panel" type="Panel" parent="BoilerUI/AmmoUI/Bar3"]
show_behind_parent = true
layout_mode = 0
offset_left = -2.0
offset_top = -3.0
offset_right = 48.0
offset_bottom = 19.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7wt3j")

[node name="ShootReadyTimer" type="Timer" parent="BoilerUI/AmmoUI"]
wait_time = 0.5
one_shot = true

[node name="Name" type="Label" parent="BoilerUI"]
layout_mode = 0
offset_left = 600.0
offset_top = 205.0
offset_right = 678.0
offset_bottom = 226.0
theme_override_font_sizes/font_size = 13
text = "Dobruzdden"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Abilities" type="Control" parent="BoilerUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DashTimer" type="Timer" parent="BoilerUI/Abilities"]
wait_time = 0.2
one_shot = true

[node name="StompTimer" type="Timer" parent="BoilerUI/Abilities"]
wait_time = 0.2
one_shot = true

[node name="AbilityActivatedPanel" type="Panel" parent="BoilerUI/Abilities"]
visible = false
layout_mode = 0
offset_left = 632.0
offset_top = 390.0
offset_right = 648.0
offset_bottom = 406.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gnbej")

[node name="AbilityActivatedAnimation" type="AnimationPlayer" parent="BoilerUI/Abilities"]
libraries = {
"": SubResource("AnimationLibrary_gbd6p")
}

[node name="Gem" type="Control" parent="BoilerUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Gem" type="Panel" parent="BoilerUI/Gem"]
offset_left = 614.4
offset_top = 147.4
offset_right = 662.4
offset_bottom = 195.4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bq6tc")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BoilerUI/Gem"]
position = Vector2(638.4, 171.4)
build_mode = 1
polygon = PackedVector2Array(-24, 0, 0, -24, 24, 0, 0, 24)

[node name="Label" type="Label" parent="BoilerUI/Gem"]
layout_mode = 0
offset_left = 618.0
offset_top = 158.0
offset_right = 658.0
offset_bottom = 184.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boiler" type="Node2D" parent="."]

[node name="Skin" type="Sprite2D" parent="Boiler"]
position = Vector2(1, -25)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_ka7jd")

[node name="UnderUI" type="Control" parent="Boiler"]
show_behind_parent = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 38.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="Circle" type="Panel" parent="Boiler/UnderUI"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2rpgm")

[node name="Look" type="Control" parent="Boiler"]
visible = false
show_behind_parent = true
layout_mode = 3
anchors_preset = 0
offset_left = -6.0
offset_top = -69.0
offset_right = 10.0
offset_bottom = -53.0

[node name="Panel" type="Panel" parent="Boiler/Look"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
theme_override_styles/panel = SubResource("StyleBoxFlat_myyge")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_er24s")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_33bqy")

[node name="AimShow" type="Node2D" parent="."]
visible = false
show_behind_parent = true

[node name="AimPanel1" type="Panel" parent="AimShow"]
show_behind_parent = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 48.0
offset_right = 24.0
offset_bottom = 432.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_joeuc")

[node name="Bush_range_visibility" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bush_range_visibility"]

[node name="Timers" type="Node2D" parent="."]

[node name="TimerMakePath" type="Timer" parent="Timers"]
autostart = true

[node name="TimerBullet" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="Abilities" type="Node2D" parent="."]

[node name="StompHitbox" type="Area2D" parent="Abilities" groups=["Stomper"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abilities/StompHitbox"]
shape = SubResource("CircleShape2D_i0sd8")
disabled = true

[connection signal="timeout" from="BoilerUI/HealthUI/Regeneration" to="." method="_on_regeneration_timeout"]
[connection signal="timeout" from="BoilerUI/HealthUI/RegenerationWait" to="." method="_on_regeneration_wait_timeout"]
[connection signal="timeout" from="BoilerUI/Abilities/DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="BoilerUI/Abilities/StompTimer" to="." method="_on_stomp_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timers/TimerMakePath" to="." method="_on_timer_make_path_timeout"]
[connection signal="timeout" from="Timers/TimerBullet" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_death_timer_timeout"]
